Layout bug fixes

--- a/styles.css
+++ b/styles.css
@@ -63,13 +63,14 @@ body {
 }
 
 #header-section {
-    grid-column: 2 / -1;
+    grid-column: 3 / -1;
     grid-row: 1;
     background-color: var(--color-panel-primary);
     min-height: 10vh;
     max-height: 20vh;
     display: flex;
     align-items: center;
+    margin-left: -5px;
 }
 
 .headline {
